--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": "@rocketseat/eslint-config/react",
-  "plugins": ["import"]
+  "plugins": ["import"],
+  "rules": {
+    // eslint-disable-next-line @typescript-eslint/no-explicit-any
+    "@typescript-eslint/no-explicit-any":"warn"}
 }
